--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -22,7 +22,7 @@ steps:
         # status-update exit status will tell us if this step has failed
         if ! ~/bin/status-update pending; then
             # Build failed already, remove the docker image and begone
-            (set -x; docker image rm "garnet:$${BUILDKITE_BUILD_NUMBER}" --no-prune)
+            (set -x; docker image rm "garnet:aha-flow-build-$${BUILDKITE_BUILD_NUMBER}" --no-prune)
         fi
 
   commands:
@@ -32,7 +32,7 @@ steps:
   - set -x; docker images; docker ps;
 
   - echo "--- Creating garnet Image"
-  - docker build . -t "garnet:${BUILDKITE_BUILD_NUMBER}"
+  - docker build . -t "garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}"
 
   # Docker image successfully built. Remove
   # .TEST file to avoid reporting failure to
@@ -58,7 +58,7 @@ steps:
   plugins:
     - uber-workflow/run-without-clone: # skip-checkout (below) does not suffice!
     - docker#v3.2.0:
-        image: garnet:${BUILDKITE_BUILD_NUMBER}
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
         volumes:
           - "/cad/:/cad"
           - "./temp:/buildkite:rw"
@@ -79,7 +79,7 @@ steps:
   plugins:
     - uber-workflow/run-without-clone: # skip-checkout alone (below) did not do the trick!
     - docker#v3.2.0:
-        image: garnet:${BUILDKITE_BUILD_NUMBER}
+        image: garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}
         # image: stanfordaha/garnet:latest
         volumes:
           - "/cad/:/cad"
@@ -213,7 +213,7 @@ steps:
   - "goldcheck-amber"
   commands:
   # '--no-prune' so it doesn't prune dangling images, we want to use them for the Docker cache.
-  - docker image rm "garnet:${BUILDKITE_BUILD_NUMBER}" --no-prune
+  - docker image rm "garnet:aha-flow-build-${BUILDKITE_BUILD_NUMBER}" --no-prune
   agents:
     docker: true
   plugins:
