--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,6 +3,29 @@ env:
 
 steps:
 
+- trigger: "aha-flow"
+  label: "triggered"
+  if: build.source != 'trigger_job'
+  build:
+    message: "PR from Canal: ${BUILDKITE_MESSAGE}"
+    # commit: "${BUILDKITE_COMMIT}"
+    # branch: "${BUILDKITE_BRANCH}"
+
+    env:
+      BUILDKITE_PULL_REQUEST: "FOO ${BUILDKITE_PULL_REQUEST}"
+      # BUILDKITE_PULL_REQUEST_BASE_BRANCH: "${BUILDKITE_PULL_REQUEST_BASE_BRANCH}"
+      # BUILDKITE_PULL_REQUEST_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
+
+- wait
+
+- label: "exit if trigger"
+  command: exit 0
+  if: build.source != 'trigger_job'
+
+- wait
+
+
+
 - label: ":wrench: Build Docker Image"
   key: "docker-build"
   plugins:
