trigger experiments ii

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -12,7 +12,7 @@ steps:
     # branch: "${BUILDKITE_BRANCH}"
 
     env:
-      BUILDKITE_PULL_REQUEST: "FOO ${BUILDKITE_PULL_REQUEST}"
+      # BUILDKITE_PULL_REQUEST: "${BUILDKITE_PULL_REQUEST}"
       # BUILDKITE_PULL_REQUEST_BASE_BRANCH: "${BUILDKITE_PULL_REQUEST_BASE_BRANCH}"
       # BUILDKITE_PULL_REQUEST_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
 
