need BUILDKITE_PULL_REQUEST

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -12,10 +12,10 @@ steps:
     branch: "${BUILDKITE_BRANCH}"
 
     env:
-      # BUILDKITE_PULL_REQUEST: "${BUILDKITE_PULL_REQUEST}"
-      # BUILDKITE_PULL_REQUEST_BASE_BRANCH: "${BUILDKITE_PULL_REQUEST_BASE_BRANCH}"
+      BUILDKITE_PULL_REQUEST: "${BUILDKITE_PULL_REQUEST}"
       BUILDKITE_PULL_REQUEST_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
       BUILDKITE_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
+      # BUILDKITE_PULL_REQUEST_BASE_BRANCH: "${BUILDKITE_PULL_REQUEST_BASE_BRANCH}"
 - wait
 
 - label: ":wrench: Build Docker Image"
