--- a/.buildkite/pr_trigger.yml
+++ b/.buildkite/pr_trigger.yml
@@ -1,13 +1,17 @@
+# Can use this file to process incoming pull-request triggers and
+# rewrite the build message to be more informative. E.g. a pull
+# request from the canal repo with a message "updated some files"
+# becomes a message more like: 'Pull Request from canal: "updated some files"'
+
 - trigger: "aha-flow"
   label: "PR check"
-  if: build.source != 'trigger_job' && build.env("BUILDKITE_PULL_REQUEST_REPO") != ""
   build:
+
     # E.g. BPPR_TAIL="StanfordAHA/canal"
     message: "PR from ${BPPR_TAIL} \"${BUILDKITE_MESSAGE}\""
     commit: "${BUILDKITE_COMMIT}"
     # branch: "${BUILDKITE_BRANCH}" # Let it default to master branch
 
     env:
-      BUILDKITE_PULL_REQUEST: "${BUILDKITE_PULL_REQUEST}"
+      BUILDKITE_PULL_REQUEST:      "${BUILDKITE_PULL_REQUEST}"
       BUILDKITE_PULL_REQUEST_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
-      BUILDKITE_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
