--- a/.buildkite/pr_trigger.yml
+++ b/.buildkite/pr_trigger.yml
@@ -1,5 +1,5 @@
-# Can use this file to process incoming pull-request triggers and
-# rewrite the build message to be more informative. E.g. a pull
+# Can use this file to process incoming pull-request triggers from aha submods.
+# It rewrites the build message to be more informative. E.g. a pull
 # request from the canal repo with a message "updated some files"
 # becomes a message more like: 'Pull Request from canal: "updated some files"'
 
@@ -10,7 +10,7 @@
     # E.g. BPPR_TAIL="StanfordAHA/canal"
     message: "PR from ${BPPR_TAIL} \"${BUILDKITE_MESSAGE}\""
     commit: "${BUILDKITE_COMMIT}"
-    # branch: "${BUILDKITE_BRANCH}" # Let it default to master branch
+    # branch: "${BUILDKITE_BRANCH}" # aha-flow uses aha master branch, not submod PR branch
 
     env:
       BUILDKITE_PULL_REQUEST:      "${BUILDKITE_PULL_REQUEST}"
