--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -17,7 +17,7 @@ steps:
       # Req from submod repo: check out aha master branch, update submod w BUILDKITE_COMMIT
       pre-checkout: |
         echo "+++ BDI PRE CHECKOUT HOOK"
-
+        set +u     # nounset? not on my watch!
         # FIXME/TODO can remove this after heroku is gone forever
         if [ "$$FLOW_HEAD_SHA" ]; then
             echo "+++ ERROR Not processing heroku requests anymore"; exit 13; fi
