clone early, clone often

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -23,6 +23,16 @@ steps:
         if [ "$$FLOW_HEAD_SHA" ]; then
             echo "+++ ERROR Not processing heroku requests anymore"; exit 13; fi
 
+        # Clone the aha repo
+        echo I am in dir `pwd`
+        set -x
+        aha_clone=$BUILDKITE_BUILD_CHECKOUT_PATH;
+        /bin/rm -rf $$aha_clone; mkdir -p $$aha_clone
+        git clone https://github.com/StanfordAHA/aha $$aha_clone; cd $$aha_clone;
+        git remote set-url origin https://github.com/StanfordAHA/aha     # Why?
+        git clean -ffxdq
+        set +x
+
         bin=$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin
         source $$bin/update-pr-repo.sh
 
