--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -32,10 +32,16 @@ steps:
         git clean -ffxdq
         set +x
 
-        # Use this hack to prepare dev branches for pull to master
-        git fetch -v --prune -- origin aha-no-heroku-cleanup || echo maybe dev time is over
-        git checkout aha-no-heroku-cleanup || echo maybe dev time is over
-
+        # Use this hack to (temporarily) use dev branches during development
+        USING_MASTER=; DEV=aha-no-heroku-cleanup
+        if [ "$DEV" ]; then
+            git fetch -v --prune -- origin $$DEV || USING_MASTER=true
+            git checkout $$DEV                   || USING_MASTER=true
+            if ! [ "$$USING_MASTER" ]; then
+                msg="### WARNING Using dev branch '$${DEV}' instead of master"
+                echo $msg | buildkite-agent annotate --style "info" --context foo3
+            fi
+        fi
         bin=$BUILDKITE_BUILD_CHECKOUT_PATH/.buildkite/bin
 
         # Make sure env var BUILDKITE_PULL_REQUEST_REPO is set correctly
