--- a/aha/util/application_parameters.json
+++ b/aha/util/application_parameters.json
@@ -273,9 +273,12 @@
     },
     "conv5_x":{
         "default":{
-            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
+            "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=32 n_oc=32 k_ic=16 k_oc=16 glb_i=8 glb_k=8 glb_o=8",
             "HL_TARGET":"host-x86-64-enable_ponds",
-            "DISABLE_GP":"1"
+            "DISABLE_GP":"1",
+            "MANUAL_PLACER":"1",
+            "IO2MEM_REG_CHAIN":"1",
+            "MEM2PE_REG_CHAIN":"1"
         },
         "fastest":{
             "HALIDE_GEN_ARGS":"in_img=7 pad=1 ksize=3 stride=1 n_ic=16 n_oc=16 k_ic=8 k_oc=8 glb_i=8 glb_k=4 glb_o=4",
